# solcore

./: flake.nix  run_contests.sh  sol-core.cabal
doc/railroad/: sail.bnf
doc/src/hull/: README.md
doc/src/sail/: README.md  assembly.md  builtins.md  datatypes.md  functions.md  modules.md  parametric-polymorphism.md  syntax.md  type-inference.md  typeclasses.md  variable-declaration-and-assignment.md
multsig/: README.md  multisig.json  multisig.solc
pretty-app/: Main.hs
rust-compiler/: Cargo.toml  README.md
rust-compiler/src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs
rust-compiler/tests/: std.rs
scripts/: gen-std-opcodes.py
src/Language/: Hull.hs
src/Language/Hull/: Compress.hs  Parser.hs  TcEnv.hs  TypeCheck.hs
src/Language/Yul/: Parser.hs
src/Solcore/Backend/: ComptimeCheck.hs  EmitHull.hs  Mast.hs  MastEval.hs  Specialise.hs
src/Solcore/Desugarer/: ContractDispatch.hs  DecisionTreeCompiler.hs  DeriveGeneric.hs  FieldAccess.hs  IndirectCall.hs  PublicMethods.hs  UniqueTypeGen.hs
src/Solcore/Frontend/: ComptimeCheck.hs
src/Solcore/Frontend/Lexer/: SolcoreLexer.hs  SolcoreLexer.x
src/Solcore/Frontend/Module/: Loader.hs
src/Solcore/Frontend/Parser/: Decl.hs  Expr.hs  Expr.hs-boot  Patterns.hs  SolcoreParser.y  Stmt.hs
src/Solcore/Frontend/Pretty/: SolcorePretty.hs  TreePretty.hs
src/Solcore/Frontend/Syntax/: Contract.hs  NameResolution.hs  Stmt.hs  SyntaxTree.hs
src/Solcore/Frontend/TypeInference/: Erase.hs  InvokeGen.hs  SccAnalysis.hs  TcContract.hs  TcModule.hs  TcStmt.hs  TcSubst.hs
src/Solcore/Pipeline/: SolcorePipeline.hs
src/Solcore/Primitives/: Primitives.hs
std/: ABIGeneric.solc  StorageGeneric.solc  dispatch.solc  opcodes.solc  std.solc
test/: Cases.hs  CompressTests.hs  ContractAbiTests.hs  ContractDispatchTests.hs  HullCases.hs  Main.hs  ModuleTypeCheckTests.hs  ParserTests.hs
test/examples/: Convertible.solc
test/examples/cases/: Add1.solc  Compose.solc  Compose3.solc  CondExp.solc  EitherModule.solc  Enum.solc  EvenOdd.solc  GetSet.solc  GoodInstance.solc  Id.solc  ListModule.solc  Logic.solc  MatchCall.solc  Mutuals.solc  NegPair.solc  Option.solc  SimpleInvoke.solc  SimpleLambda.solc  add-moritz.solc  app.solc  array.solc  asm-assign-no-return.solc  asm-assign-non-word.solc  asm-let-bool-lit.solc  asm-let-no-return.solc  asm-let-uninit.solc  assembly.solc  bitwise.solc  bool-elim.solc  bytes4-abi.solc  catch-all.solc  closure-free-var-local.solc  closure-free-var-std.solc  closure-free-var.solc  comparisons.solc  complexproxy.solc  compose_desugared.solc  const-array.solc  const.solc  copytomem.solc  (+93 more)
test/examples/comptime/: CondExpr.solc  CondStmt.solc  OneTwo.solc  Plus.solc  Size.solc  StdSize.solc  counter.solc  fib.solc  string-lit-keccak.solc  string-lit-len.solc  string-lit-ops.solc
test/examples/dispatch/: Revert.json  Revert.solc  assembly.json  assembly.solc  basic.json  basic.solc  bytecode.json  bytecode.solc  concat.json  concat.solc  counter.solc  deposit.json  deposit.solc  ecrecover.json  ecrecover.solc  empty.solc  empty_no_constructor.solc  fallback.json  fallback.solc  fib.solc  forloops.json  forloops.solc  generic_sum.json  hashes.json  hashes.solc  index_slice.json  index_slice.solc  interfaceid.json  interfaceid.solc  memory.json  memory.solc  miniERC20.json  miniERC20.solc  multisig.json  multisig.sol  multisig.solc  neg.json  neg.solc  nonpayable_ctor.json  nonpayable_ctor.solc  (+28 more)
test/examples/hull/: 11-err-asm-sum-return.hull
test/examples/invokable/: 021nid.solc  022nid-invoke.solc  024lamid.solc  025lamid-invoke.solc  026capture.solc  027retfun.solc  028modifier.solc  031enum.solc
test/examples/opcodes/: all-shapes.solc
test/examples/spec/: 00answer.solc  010answer.solc  011id.solc  012nid.solc  013comp.solc  01id.solc  021not.solc  022add.solc  024arith.solc  027sstore.solc  02nid.solc  031maybe.solc  032simplejoin.solc  033join.solc  034cojoin.solc  035padding.solc  036wildcard.solc  037dwarves.solc  038food0.solc  039food.solc  041pair.solc  042triple.solc  043fstsnd.solc  047rgb.solc  048rgb2.solc  049rgb3.solc  051expreturn.solc  051negBool.solc  052negPair.solc  052return.solc  053return.solc  06comp.solc  101struct1Field.solc  102uintField.solc  103struct3Fields.solc  105nestedStruct.solc  10negBool.solc  111storageStruct.solc  112ContractStorage.solc  113counter.solc  (+16 more)
test/examples/spec/attic/: 051expreturn.solc  052return.solc  053return.solc
test/imports/: external_lib_main.solc  import_std_minimal.solc
test/testrunner/: testrunner.cpp
yule/: Compress.hs  Main.hs  Translate.hs
