cabal-version: 3.4

name:           sol-core
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts

  build-depends:
      base >= 4.19.0.0
    , mtl
    , bytestring
    , containers
    , cryptonite
    , memory
    , algebraic-graphs
    , array
    , directory
    , filepath
    , megaparsec >= 9.6
    , optparse-applicative
    , parser-combinators >= 1.3
    , pretty
    , pretty-simple
    , split
    , syb
    , template-haskell
    , text
    , time
    , timeit

  default-language: Haskell2010
  default-extensions: OverloadedStrings
                      FlexibleInstances
                      FlexibleContexts
                      PatternSynonyms
                      TupleSections
                      TypeFamilies
                      BlockArguments
                      DeriveDataTypeable
                      ImportQualifiedPost
                      ScopedTypeVariables
                      TypeApplications
  ghc-options: -Wall

library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      Solcore.Backend.ComptimeCheck
      Solcore.Backend.EmitHull
      Solcore.Backend.Mast
      Solcore.Backend.MastEval
      Solcore.Backend.Specialise
      Solcore.Desugarer.DecisionTreeCompiler
      Solcore.Desugarer.FieldAccess
      Solcore.Desugarer.IfDesugarer
      Solcore.Desugarer.IndirectCall
      Solcore.Desugarer.IntLiteralDesugar
      Solcore.Desugarer.ReplaceWildcard
      Solcore.Desugarer.ContractDispatch
      Solcore.Desugarer.PublicMethods
      Solcore.Desugarer.ReplaceFunTypeArgs
      Solcore.Desugarer.UniqueTypeGen
      Solcore.Frontend.ComptimeCheck
      Solcore.Frontend.Lexer.SolcoreLexer
      Solcore.Frontend.Module.Identity
      Solcore.Frontend.Module.Loader
      Solcore.Frontend.Parser.Decl
      Solcore.Frontend.Parser.Expr
      Solcore.Frontend.Parser.Patterns
      Solcore.Frontend.Parser.SolcoreParser
      Solcore.Frontend.Parser.SolcoreTypes
      Solcore.Frontend.Parser.Stmt
      Solcore.Frontend.Pretty.SolcorePretty
      Solcore.Frontend.Pretty.Name
      Solcore.Frontend.Pretty.ShortName
      Solcore.Frontend.Pretty.TreePretty
      Solcore.Frontend.Syntax
      Solcore.Frontend.Syntax.Ty
      Solcore.Frontend.Syntax.Contract
      Solcore.Frontend.Syntax.Name
      Solcore.Frontend.Syntax.NameResolution
      Solcore.Frontend.Syntax.Stmt
      Solcore.Frontend.Syntax.SyntaxTree
      Solcore.Frontend.TypeInference.Erase
      Solcore.Frontend.TypeInference.Id
      Solcore.Frontend.TypeInference.InvokeGen
      Solcore.Frontend.TypeInference.NameSupply
      Solcore.Frontend.TypeInference.SccAnalysis
      Solcore.Frontend.TypeInference.TcContract
      Solcore.Frontend.TypeInference.TcEnv
      Solcore.Frontend.TypeInference.TcMonad
      Solcore.Frontend.TypeInference.TcModule
      Solcore.Frontend.TypeInference.TcSat
      Solcore.Frontend.TypeInference.TcSimplify
      Solcore.Frontend.TypeInference.TcStmt
      Solcore.Frontend.TypeInference.TcSubst
      Solcore.Frontend.TypeInference.TcUnify
      Solcore.Pipeline.Options
      Solcore.Pipeline.SolcorePipeline
      Solcore.Primitives.Primitives
      Language.Hull
      Language.Hull.Parser
      Language.Hull.TcEnv
      Language.Hull.TcMonad
      Language.Hull.TypeCheck
      Language.Hull.Types
      Language.Yul
      Language.Yul.Parser
      Language.Yul.QuasiQuote
      Common.LightYear
      Common.Monad
      Common.Pretty
      Common.RIO
  hs-source-dirs:
      src
  ghc-options:
    -O1

executable sol-core
  import: common-opts
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends: sol-core
  ghc-options:
    -O1 -rtsopts

executable yule
    import: common-opts
    main-is:          Main.hs
    hs-source-dirs: yule
    default-extensions:
      LambdaCase
      PatternSynonyms
      BlockArguments
      ImportQualifiedPost
    other-modules: Locus, Options, TM, Translate, Builtins, Compress
    build-depends:    base ^>=4.19.1.0,
                      pretty >=  1.1,
                      containers >= 0.6,
                      mtl >= 2.3,
                      megaparsec >= 9.6,
                      parser-combinators >= 1.3,
                      optparse-applicative >= 0.18,
                      sol-core
    ghc-options:
      -rtsopts

test-suite sol-core-tests
  import: common-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is: Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    Cases
    HullCases
    MatchCompilerTests
    ModuleTypeCheckTests
    YulEvalTests
    ParserTests

  build-depends:
    , sol-core
    , tasty
    , tasty-program
    , tasty-expected-failure
    , tasty-hunit
    , HUnit

  build-tool-depends: sol-core:sol-core, sol-core:yule

test-suite sol-core-contract-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: ContractMain.hs

  ghc-options:
    -Wall -O0

  build-depends:
    , base >= 4.19.0.0
    , directory
    , filepath
    , process

  default-language: Haskell2010
